# firewalld-ext

./: .gitignore  README.md  pyproject.toml
src/: apply_rules.py  data_handler.py  main.py  sources.py  update.py
src/firewalld_ext/: apply_rules.py  data_handler.py  main.py  sources.py  update.py
systemd/: firewalld-ext.service  firewalld-ext.timer
