[project]
name = "firewalld-ext"
version = "0.1.6"
description = "Open source threat feed auto blocker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "systemd-python>=235",
]

[project.scripts]
firewalld-ext = "firewalld_ext.main:main"
